--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 offset-md-1">
-                        <a class="subhead_logo" href="#"><img src="/src/img/icon/Uber.png" alt="logo"></a>
+                        <a class="subhead_logo" href="#"><img src="img/icon/Uber.png" alt="logo"></a>
                         <div class="subhead_offic">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
@@ -74,7 +74,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon1.png" alt="1" class="item_img">
+                            <img src="img/icon/icon1.png" alt="1" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Никаких наличных, оплата происходит автоматически</div>
@@ -87,7 +87,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon2.png" alt="2" class="item_img">
+                            <img src="img/icon/icon2.png" alt="2" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -100,7 +100,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon3.png" alt="3" class="item_img">
+                            <img src="img/icon/icon3.png" alt="3" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Высокий доход с гарантированными выплатами</div>
@@ -113,7 +113,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon4.png" alt="4" class="item_img">
+                            <img src="img/icon/icon4.png" alt="4" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Работа в удобное время, никаких графиков</div>
@@ -126,7 +126,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon5.png" alt="5" class="item_img">
+                            <img src="img/icon/icon5.png" alt="5" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Комфортное, прозрачное и простое подключение</div>
@@ -139,7 +139,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon6.png" alt="6" class="item_img">
+                            <img src="img/icon/icon6.png" alt="6" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Всегда большое количество заказов</div>
@@ -152,7 +152,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon7.png" alt="7" class="item_img">
+                            <img src="img/icon/icon7.png" alt="7" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Круглосуточная поддержка</div>
@@ -165,7 +165,7 @@
                 <div class="col-md-6">
                     <div class="second_block">
                         <div class="second_round">
-                            <img src="/src/img/icon/icon8.png" alt="8" class="item_img">
+                            <img src="img/icon/icon8.png" alt="8" class="item_img">
                         </div>
                         <div class="second_descr">
                             <div class="second_subtitle">Без шашечек и наклеек</div>
@@ -187,37 +187,37 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_sub">оформление заказа одним касанием</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_sub">надежная подача</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_sub">прозрачные цены</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_sub">безналичная оплата</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_sub">обратная связь</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_sub">разделить стоимость поездки</div>
-                        <div class='mobile_item_plus'><img src="/src/img/pic/plus.png" alt="plus"></div>
+                        <div class='mobile_item_plus'><img src="img/pic/plus.png" alt="plus"></div>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
             <div class="label label_wh">Возможности</div>
             <div class="title title_wh hidden">Выбор - отличная штука!</div>
             <div class="subtitle subtitle_wh hidden">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-            <img src="../src/img/pic/car.png" alt="car" class="choise_img">
+            <img src="img/pic/car.png" alt="car" class="choise_img">
             <div class="choise_descr">Машины на каждый день. <br> Лучше, быстрее и дешевле, чем такси</div>
         </div>
     </section>
@@ -353,7 +353,7 @@
                     <img src="img/icon/google.png" alt="Google play">
                 </a>
                 <a href="#">
-                    <img src="img/icon/Windows.png" alt="Windows store">
+                    <img src="img/icon/windows.png" alt="Windows store">
                 </a>
             </div>
         </div>
